<resources>
    <string name="app_name">BloodGroupsSearchingSystem</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="nav_search">Tìm</string>
    <string name="nav_news">Tin Tức</string>
    <string name="nav_blood">Sự Kiện</string>
    <string name="nav_user">Người dùng</string>

    <dimen name="fix_size">40dp</dimen>
    <dimen name="reset_size">280dp</dimen>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_donate">Hiến máu</string>
    <string name="channel_name">channel_name</string>
    <string name="channel_description">channel_description</string>
</resources>
