<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_search"
        android:icon="@drawable/search"
        android:title="@string/nav_search"
        />
    <item
        android:id="@+id/nav_news"
        android:icon="@drawable/news"
        android:title="@string/nav_news" />
    <item
        android:id="@+id/nav_blood"
        android:icon="@drawable/blood"
        android:title="@string/nav_blood" />
    <item
        android:id="@+id/nav_donate"
        android:icon="@drawable/donate_blood"
        android:title="@string/nav_donate" />
    <item
        android:id="@+id/nav_user"
        android:icon="@drawable/user"
        android:title="@string/nav_user" />
</menu>